--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,6 +2,7 @@ body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   background: #000;
   color: #fff;
+  overflow: hidden;
 }
 
 a {
@@ -15,25 +16,28 @@ ul{
   padding: 0;
   box-sizing: border-box;
 }
-
 .content{
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   height: 100vh;
+  overflow: hidden;
 }
 .content header{
   height: 30vh;
-  border: 1px solid #fff;
+  background: rgba(10, 10, 10, .5)
 }
 
 .right{
-  flex: 1;
-  /*height: 70vh;*/
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: -1;
 }
-.right{
-   /*box-reflect: above;*/
- }
 .list-wrap{
   overflow: auto;
   height: 21vh;
@@ -57,4 +61,9 @@ h3 {
 }
 .typeul {
   display: flex;
+}
+.typeul li {
+  flex: 1;
+  text-align: center;
+  cursor: pointer;
 }
